--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 project(fractals VERSION 0.1.0 LANGUAGES CXX)
 
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+include(SetCompilerWarningAll)
+
 add_executable(fractals
     src/fractals.cpp
 )
