Add cmake parser target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,20 @@ add_executable(lemon
     tools/lemon/lemon.c
 )
 
+add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/infix.cpp
+    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/lemon -q
+        -T${CMAKE_CURRENT_LIST_DIR}/tools/lemon/lempar.c
+        -o${CMAKE_CURRENT_BINARY_DIR}/infix.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/src/infix.yy
+    VERBATIM
+    DEPENDS lemon src/infix.yy tools/lemon/lempar.c
+    COMMENT "[infix] Building parser with lemon"
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+)
+
 add_executable(fractals
     src/fractals.cpp
+    ${CMAKE_CURRENT_BINARY_DIR}/infix.cpp
 )
 set_property(TARGET fractals
     PROPERTY CXX_STANDARD 17
